keynote-programming24/target/release/build/crossbeam-utils-b66f464b3e7b041a/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
    --> <anon>:1:38
     |
1    |   pub type Probe = core::sync::atomic::AtomicU128;
     |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
     |
    ::: /home/benoit/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/sync/atomic.rs:3060:1
     |
3060 | / atomic_int! {
3061 | |     cfg(target_has_atomic = "16"),
3062 | |     cfg(target_has_atomic_equal_alignment = "16"),
3063 | |     stable(feature = "integer_atomics_stable", since = "1.34.0"),
...    |
3075 | |     u16 AtomicU16
3076 | | }
     | |_- similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
